--- a/config.toml
+++ b/config.toml
@@ -4,3 +4,17 @@
   [[module.imports.mounts]]
     source = "."
     target = "assets/feather"
+
+[[module.imports]]
+  path = "github.com/FortAwesome/Font-Awesome"
+  disable = false
+  [[module.imports.mounts]]
+    source = "."
+    target = "assets/FortAwesome/Font-Awesome"
+
+[[module.imports]]
+  path = "github.com/twbs/icons"
+  disable = false
+  [[module.imports.mounts]]
+    source = "."
+    target = "assets/twbs/icons"
